Feayire: update reame and deploy app
