# backend/src/features/cart/dto/add-cart-item.dto.ts
@@ -1,0 +1,10 @@
+import { IsString, IsInt, Min } from 'class-validator';
+
+export class AddCartItemDto {
+  @IsString()
+  menuItemId: string;
+
+  @IsInt()
+  @Min(1)
+  quantity: number;
+}
